[*] Some unnecessary changes in temporary code;

--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 <body>
     <div class="page-wrapper">
         <div class="dialog">
-            Hello u there what do you want??
-
+            Some text
         </div>
     </div>
 
     <script type="text/javascript" src="script.js"></script>
-
 </body>
 </html>
