--- a/index.html
+++ b/index.html
@@ -6,64 +6,106 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;subset=cyrillic"
-          rel="stylesheet"
-    >
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,700" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="page-wrapper">
+    <header class="header">
+        <a class="logo" href="#"><img class="logo-svg" src="assets/images/Sugi-logo.svg" alt="Sugi logo."></a>
+        <a class="get-card-btn btn-animated" href="#">Get Sugi Card</a>
+    </header>
     <!-- some content on the page displayed depending on class e.g. eth | btc | eur -->
-    <main class="dialog light eth">
+    <main class="dialog light btc">
         <h1 class="headline">Payment request</h1>
         <div id="walletIdentifier">
-                <span>
-                    9233
-                </span>
             <span>
-                    1000
-                </span>
+                08cfc43a10e81f84d6420568f191a713772aca850e3a682b0a00e882c40b07f9
+            </span>
             <span>
-                    1000
-                </span>
+                1000
+            </span>
             <span>
-                    1000
-                </span>
+                1000
+            </span>
+            <span>
+                1000
+            </span>
         </div>
         <div id="qrCode">
             <div class="dummy-qr-code"></div>
         </div>
         <div class="amount-wrapper">
-            <span id="amount">100</span>
+            <span id="amount">0.0000123</span>
             <span class="currency"></span>
         </div>
-        <section class="store-btns-wrapper">
-                <span class="store-btns-headline">
-                    install Sugi wallet
-                </span>
-            <a href="#">
-                <img src="assets/images/appstore.png"
-                     alt="Download Sugi wallet on the AppStore"
-                     title="Download Sugi wallet on the AppStore"
-                     class="store-btn"
-                >
-            </a>
-            <a href="#">
-                <img src="assets/images/googleplay.png"
-                     alt="Get Sugi wallet on Google Play"
-                     title="Get Sugi wallet on Google Play"
-                     class="store-btn"
-                >
+        <section class="btns-wrapper">
+            <section class="store-btns-wrapper">
+                <a href="#" class="app-store btn-animated"></a>
+                <a href="#" class="google-play btn-animated"></a>
+            </section>
+            <a href="#" class="other-wallet-btn btn-animated" title="Open in alternative wallet">
+                Open in alternative wallet
             </a>
         </section>
-        <a href="#" class="other-wallet-btn" title="Open in alternative wallet">
-            Open in other wallet
-        </a>
+        <div class="rectangles"></div>
     </main>
 </div>
 
-<!--<script type="text/javascript" src="script.js"></script>-->
+<script type="text/javascript">
+  /*
+  document.addEventListener("DOMContentLoaded", function (event) {
+    // injecting error message on page
+    if ('{{{error}}}' === 'true') {
+      // will contain error message
+      var errorOutput = '';
+      switch ('{{{errorType}}}') {
+        case 'CURRENCY':
+          errorOutput = 'It seems to be the wrong currency in this request. Sorry, we can\'t provide payment with "{{{currency}}}" currency.';
+          break;
+        case 'AMOUNT':
+          errorOutput = 'It seems to be the wrong amount of "{{{currency}}}" in this request. Sorry, we can\'t provide payment of {{{amount}}} amount.';
+          break;
+        default:
+        // errorOutput = 'Sorry, the service is now temporarily unavailable... At the moment, work on this is ongoing, and we will fix it soon.';
+      }
+      document.querySelector('#errorMessage p').innerText = errorOutput;
+    } else {
+      // add walletId on page
+      if ('{{{currencyType}}}' === 'eur') {
+        document.querySelector('#walletIdentifier')
+          .getElementsByTagName('span')[0].innerText = '{{{walletId}}}'.slice(0, 4);
+        document.querySelector('#walletIdentifier')
+          .getElementsByTagName('span')[1].innerText = '{{{walletId}}}'.slice(4, 8);
+        document.querySelector('#walletIdentifier')
+          .getElementsByTagName('span')[2].innerText = '{{{walletId}}}'.slice(8, 12);
+        document.querySelector('#walletIdentifier')
+          .getElementsByTagName('span')[3].innerText = '{{{walletId}}}'.slice(12, 16);
+      } else {
+        document.querySelector('#walletIdentifier').getElementsByTagName('span')[0].innerText = '{{{walletId}}}';
+      }
+      // creating link for qr code
+      var currencyName = '{{{currencyType}}}' == 'btc' ? 'bitcoin' :
+        '{{{currencyType}}}' == 'eth' ? 'ethereum' : 'euro';
+      var linkPostfix = currencyName === 'ethereum' ? '?value={{{amount}}}e18' : '?amount={{{amount}}}';
+      var linkToOtherWallet = currencyName == 'euro' ? 'https://sugi.io/pay/{{{walletId}}}?amount={{{amount}}}&currency={{{currency}}}' :
+        currencyName + ':{{{walletId}}}' + linkPostfix;
+      // add qrCode on page
+      new QRCode(document.getElementById("qrCode"), {
+        text: linkToOtherWallet,
+        width: 220,
+        height: 220,
+        colorDark: "#000000",
+        colorLight: "#ffffff",
+        correctLevel: QRCode.CorrectLevel.H
+      });
+      document.getElementById('otherWallet').setAttribute('href', linkToOtherWallet);
+    }
+  });
+  */
+</script>
 </body>
 </html>
